--- a/src/style/custom.css
+++ b/src/style/custom.css
@@ -24,6 +24,13 @@ body {
   border-width: 2px;
   padding: 8px 20px;
 }
+#app .btn-outline-primary:hover {
+  background-color: #ff6060;
+  color: #fff;
+}
+#app .btn-outline-primary:hover svg {
+  fill: #fff;
+}
 #app .footer {
   padding-top: 20px;
   padding-bottom: 60px;
